uptime/uptime-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime
  labels:
    name: uptime
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app: uptime-kuma
