uptime/uptime-kuma-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
  namespace: uptime
spec:
  selector:
    app: uptime
  ports:
  - name: uptime
    port: 80
    protocol: TCP
    targetPort: 3001
