uptime/uptime-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-ingressroute
  namespace: uptime
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.demo.com`)
      kind: Rule
      services:
        - name: uptime-svc
          port: 80
